creating the blog page

--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,8 @@
       class="container mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8 py-16 px-6"
     >
       <div>
-        <h1 class="text-5xl font-bold text-gray-900 leading-tight">
-          Transforming Kenyan Spaces<br />
-          <span class="text-primary"
-            >Designing with Elegance & Functionality</span
-          >
+        <h1 class="text-5xl font-bold text-primary leading-tight">
+          Welcome to Interiors By Tiffi <br />
         </h1>
         <p class="mt-4 text-gray-700 text-lg">
           We specialize in crafting tailored, beautiful, and functional
@@ -150,6 +147,7 @@
       </div>
     </section>
 
+    <!-- Portfolio Section -->
     <section id="projects" class="py-16 bg-accent">
       <div class="container mx-auto px-6">
         <h2 class="text-3xl font-bold text-primary mb-6 text-center">
@@ -157,6 +155,18 @@
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <!-- Portfolio cards will be dynamically populated -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Blog Section -->
+    <section id="blogs" class="py-16 bg-gray-100">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-bold text-primary mb-6 text-center">
+          Our Blog
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <!-- Blog cards will be dynamically populated here -->
         </div>
       </div>
     </section>
