--- a/public/blog.html
+++ b/public/blog.html
@@ -5,70 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <title>Blog Post</title>
+    <title>Blog Post | Interior Design Kenya</title>
 
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/output.css" />
 
-    <!-- Font Awesome -->
+    <!-- Bootstrap CSS -->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body class="bg-background text-gray-300 font-sans">
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand fw-bold" href="/">
-          <img
-            src="/images/my-logo.jpeg"
-            alt="Kami Logo"
-            width="60"
-            height="40"
-            class="d-inline-block align-text-top"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
+    <!-- Navbar -->
+    <nav class="bg-accent sticky top-0 z-50 shadow-md">
+      <div
+        class="container mx-auto flex items-center justify-between py-4 px-6"
+      >
+        <a href="/" class="text-xl font-bold text-primary">Interior Design</a>
+        <nav id="mobile-nav" class="hidden md:flex space-x-8">
+          <a href="/" class="hover:text-primary">Home</a>
+          <a href="#services" class="hover:text-primary">Services</a>
+          <a href="#projects" class="hover:text-primary">Portfolio</a>
+          <a href="#contact" class="hover:text-primary">Contact</a>
+        </nav>
+        <button id="mobile-menu" class="md:hidden text-primary">
+          <i class="fas fa-bars text-xl"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link text-light fw-medium" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-medium" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-medium" href="#portfolio"
-                >Portfolio</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-medium" href="#contact"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
 
     <!-- Blog Content -->
     <main class="container mx-auto mt-20 px-6">
-      <div id="blog-content" class="prose prose-lg text-gray-300"></div>
+      <div id="blog-content" class="prose prose-lg text-gray-300">
+        <!-- Blog content dynamically populated by blog.js -->
+      </div>
     </main>
 
     <!-- Footer -->
@@ -78,20 +52,12 @@
       </p>
     </footer>
 
-    <!-- Floating WhatsApp Button -->
-    <div class="fixed bottom-5 right-5 z-50">
-      <a
-        href="https://wa.me/254123456789?text=Hello%20Kami%2C%20I%20am%20interested%20in%20your%20services."
-        target="_blank"
-        class="bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition duration-300 flex items-center justify-center"
-        aria-label="Chat on WhatsApp"
-      >
-        <i class="fab fa-whatsapp fa-2x"></i>
-      </a>
-    </div>
-
     <!-- Scripts -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/scripts/blog.js" type="module"></script>
+    <script type="module" src="/scripts/blog.js"></script>
   </body>
 </html>
