--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,33 @@
   <!-- custom css -->
   <link rel="stylesheet" href="/styles.css" />
 
-  <body class="bg-background text-text font-sans">
+  <body class="bg-idcBackground text-idcText font-idcSans">
     <!-- Navbar -->
-    <header class="bg-accent sticky top-0 z-50">
+    <header class="bg-idcAccent sticky top-0 z-50">
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
-        <a href="#hero" class="text-xl font-bold text-primary"
+        <a href="#hero" class="text-xl font-bold text-idcPrimary"
           >Interior Design</a
         >
-        <nav id="mobile-nav" class="hidden md:flex space-x-8">
-          <a href="#about" class="hover:text-primary">About</a>
-          <a href="#services" class="hover:text-primary">Services</a>
-          <a href="#projects" class="hover:text-primary">Portfolio</a>
-          <a href="#contact" class="hover:text-primary">Contact</a>
+        <nav
+          id="mobile-nav"
+          class="hidden absolute md:relative md:flex md:flex-row flex-col md:space-x-8 top-full left-0 w-full md:w-auto bg-idcAccent md:bg-transparent"
+        >
+          <a href="#about" class="block py-2 px-4 hover:text-idcHighlight"
+            >About</a
+          >
+          <a href="#services" class="block py-2 px-4 hover:text-idcHighlight"
+            >Services</a
+          >
+          <a href="#projects" class="block py-2 px-4 hover:text-idcHighlight"
+            >Portfolio</a
+          >
+          <a href="#contact" class="block py-2 px-4 hover:text-idcHighlight"
+            >Contact</a
+          >
         </nav>
-        <button id="mobile-menu" class="md:hidden text-primary">
+        <button id="mobile-menu" class="md:hidden text-idcPrimary">
           <i class="fas fa-bars text-xl"></i>
         </button>
       </div>
@@ -45,16 +56,16 @@
       class="container mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-8 py-16 px-6"
     >
       <div>
-        <h1 class="text-5xl font-bold text-primary leading-tight">
-          Welcome to Interiors By Tiffi <br />
+        <h1 class="text-idcHero font-idcSerif leading-tight text-idcPrimary">
+          Welcome to Interiors By Tiffi
         </h1>
-        <p class="mt-4 text-gray-700 text-lg">
-          We specialize in crafting tailored, beautiful, and functional
-          interiors for Kenyan homes and businesses.
+        <p class="mt-4 text-idcText text-idcSubHero">
+          Crafting tailored, beautiful, and functional interiors for Kenyan
+          homes and businesses.
         </p>
         <a
           href="#services"
-          class="mt-6 px-6 py-3 bg-primary text-white rounded-lg font-bold hover:bg-opacity-90 inline-block smooth-scroll"
+          class="mt-6 px-6 py-3 bg-idcHighlight text-white rounded-lg font-bold hover:bg-opacity-90 inline-block smooth-scroll"
         >
           Explore Our Services
         </a>
@@ -63,17 +74,17 @@
         <img
           src="/images/hero-interior.jpg"
           alt="Hero Image"
-          class="rounded-lg shadow-lg"
+          class="rounded-xl shadow-lg"
           loading="lazy"
         />
       </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" class="bg-accent py-16">
+    <section id="about" class="bg-idcAccent py-16">
       <div class="container mx-auto px-6">
         <h2
-          class="text-3xl font-bold text-primary mb-6 text-center md:text-left"
+          class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center md:text-left"
         >
           About Us
         </h2>
@@ -86,17 +97,17 @@
             />
           </div>
           <div>
-            <p class="text-gray-300 text-lg">
+            <p class="text-idcText text-lg">
               Based in Kenya, we specialize in creating stunning interiors that
               blend modern aesthetics with cultural inspirations.
             </p>
-            <p class="text-gray-300 text-lg">
+            <p class="text-idcText text-lg">
               From residential makeovers to commercial transformations, our
               designs deliver comfort, functionality, and beauty.
             </p>
             <a
               href="/about.html"
-              class="px-6 py-3 bg-primary text-white rounded-lg font-bold hover:bg-opacity-90 inline-block"
+              class="px-6 py-3 bg-idcHighlight text-white rounded-lg font-bold hover:bg-opacity-90 inline-block"
             >
               Read More About Us
             </a>
@@ -106,9 +117,9 @@
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="py-16 bg-accent">
+    <section id="services" class="py-16 bg-idcAccent">
       <div class="container mx-auto">
-        <h2 class="text-3xl font-bold text-primary mb-6 text-center">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Our Services
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -118,26 +129,26 @@
     </section>
 
     <!-- Why Choose Us Section -->
-    <section id="why-us" class="py-16 bg-accent text-gray-300">
+    <section id="why-us" class="py-16 bg-idcAccent text-idcText">
       <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-bold text-primary mb-6 text-center">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Why Choose Us?
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div class="text-center">
-            <i class="fas fa-paint-brush text-primary text-5xl mb-4"></i>
+            <i class="fas fa-paint-brush text-idcHighlight text-5xl mb-4"></i>
             <h3 class="text-xl font-semibold mb-2">Creative Expertise</h3>
             <p>
               We deliver innovative designs that reflect your unique vision.
             </p>
           </div>
           <div class="text-center">
-            <i class="fas fa-handshake text-primary text-5xl mb-4"></i>
+            <i class="fas fa-handshake text-idcHighlight text-5xl mb-4"></i>
             <h3 class="text-xl font-semibold mb-2">Client Focus</h3>
             <p>Our approach is collaborative, ensuring your needs are met.</p>
           </div>
           <div class="text-center">
-            <i class="fas fa-tools text-primary text-5xl mb-4"></i>
+            <i class="fas fa-tools text-idcHighlight text-5xl mb-4"></i>
             <h3 class="text-xl font-semibold mb-2">Quality Execution</h3>
             <p>
               We guarantee professional workmanship and attention to detail.
@@ -148,9 +159,9 @@
     </section>
 
     <!-- Portfolio Section -->
-    <section id="projects" class="py-16 bg-accent">
+    <section id="projects" class="py-16 bg-idcAccent">
       <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-bold text-primary mb-6 text-center">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Our Portfolio
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -160,9 +171,9 @@
     </section>
 
     <!-- Blog Section -->
-    <section id="blogs" class="py-16 bg-gray-100">
+    <section id="blogs" class="py-16 bg-idcBackground">
       <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-bold text-primary mb-6 text-center">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Our Blog
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -172,9 +183,11 @@
     </section>
 
     <!-- FAQs Section -->
-    <section id="faqs" class="py-16 bg-accent">
+    <section id="faqs" class="py-16 bg-idcAccent">
       <div class="container mx-auto">
-        <h2 class="text-3xl font-bold text-primary mb-6 text-center">FAQs</h2>
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
+          FAQs
+        </h2>
         <div id="faqsAccordion" class="accordion"></div>
       </div>
     </section>
@@ -182,53 +195,53 @@
     <!-- Contact Section -->
     <section id="contact" class="py-16">
       <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-bold text-primary mb-6 text-center">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Contact Me
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <!-- Contact Form -->
-          <form class="js-contact-form bg-accent p-6 rounded">
+          <form class="js-contact-form bg-idcAccent p-6 rounded">
             <div class="mb-4">
-              <label for="name" class="block text-gray-300">Name</label>
+              <label for="name" class="block text-idcText">Name</label>
               <input
                 type="text"
                 id="name"
                 name="name"
                 placeholder="Enter your name"
-                class="w-full mt-1 p-2 bg-background text-gray-300 rounded"
+                class="w-full mt-1 p-2 bg-idcBackground text-idcText rounded"
                 required
               />
             </div>
             <div class="mb-4">
-              <label for="email" class="block text-gray-300">Email</label>
+              <label for="email" class="block text-idcText">Email</label>
               <input
                 type="email"
                 id="email"
                 name="email"
                 placeholder="Enter your email"
-                class="w-full mt-1 p-2 bg-background text-gray-300 rounded"
+                class="w-full mt-1 p-2 bg-idcBackground text-idcText rounded"
                 required
               />
             </div>
             <div class="mb-4">
-              <label for="message" class="block text-gray-300">Message</label>
+              <label for="message" class="block text-idcText">Message</label>
               <textarea
                 id="message"
                 rows="4"
                 name="message"
                 placeholder="Enter your message"
-                class="w-full mt-1 p-2 bg-background text-gray-300 rounded"
+                class="w-full mt-1 p-2 bg-idcBackground text-idcText rounded"
                 required
               ></textarea>
             </div>
             <button
               type="submit"
-              class="w-full px-4 py-2 bg-primary hover:bg-opacity-90 text-white font-bold rounded"
+              class="w-full px-4 py-2 bg-idcHighlight hover:bg-opacity-90 text-white font-bold rounded"
             >
               Send Message
             </button>
             <div class="spinner-container hidden mt-4 flex justify-center">
-              <div class="spinner-border text-primary" role="status">
+              <div class="spinner-border text-idcHighlight" role="status">
                 <span class="visually-hidden">Loading...</span>
               </div>
             </div>
@@ -236,37 +249,37 @@
           </form>
 
           <!-- Contact Info -->
-          <div class="bg-accent p-6 rounded text-gray-300">
-            <h3 class="text-xl font-semibold text-primary mb-4">
+          <div class="bg-idcAccent p-6 rounded text-idcText">
+            <h3 class="text-xl font-semibold text-idcPrimary mb-4">
               Get in Touch
             </h3>
             <div class="mb-4">
-              <i class="fas fa-envelope text-primary mr-3"></i>
+              <i class="fas fa-envelope text-idcHighlight mr-3"></i>
               <span
                 >Email:
                 <a
                   href="mailto:devandrew66@gmail.com"
-                  class="hover:underline text-primaryCol"
+                  class="hover:underline text-idcHighlight"
                   >devandrew66@gmail.com</a
                 ></span
               >
             </div>
             <div class="mb-4">
-              <i class="fas fa-phone text-primary mr-3"></i>
+              <i class="fas fa-phone text-idcHighlight mr-3"></i>
               <span
                 >Phone:
                 <a
                   href="tel:+254725746263"
-                  class="hover:underline text-primaryCol"
+                  class="hover:underline text-idcHighlight"
                   >+254 725 746263</a
                 ></span
               >
             </div>
             <div class="mb-4">
-              <i class="fas fa-map-marker-alt text-primary mr-3"></i>
+              <i class="fas fa-map-marker-alt text-idcHighlight mr-3"></i>
               <span
                 >Location:
-                <span class="text-gray-400">Nairobi, Kenya</span></span
+                <span class="text-idcText">Nairobi, Kenya</span></span
               >
             </div>
           </div>
@@ -274,8 +287,8 @@
       </div>
     </section>
 
-    <footer class="bg-gray-900 text-center py-4">
-      <p class="text-gray-400">
+    <footer class="bg-idcBackground text-center py-4">
+      <p class="text-idcText">
         © 2024 Interior Design Kenya. All Rights Reserved.
       </p>
     </footer>
@@ -284,7 +297,7 @@
     <a
       id="floatingWhatsApp"
       href="#"
-      class="fixed bottom-4 right-4 bg-green-500 text-white py-3 px-6 rounded-lg shadow-lg flex items-center space-x-2 hover:bg-green-600 transition animate-shake"
+      class="fixed bottom-4 right-4 bg-idcHighlight text-white py-3 px-6 rounded-lg shadow-lg flex items-center space-x-2 hover:bg-opacity-90 transition animate-shake"
       data-service="General Inquiry"
       data-whatsapp="Hello Andrew, I would like to discuss a project with you."
     >
@@ -297,11 +310,11 @@
       id="whatsappModal"
       class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
     >
-      <div class="bg-background rounded-lg p-6 w-full max-w-sm">
-        <h3 class="text-xl font-bold text-primary mb-4">Book Service</h3>
-        <p class="text-gray-300 mb-6">
+      <div class="bg-idcBackground rounded-lg p-6 w-full max-w-sm">
+        <h3 class="text-xl font-bold text-idcPrimary mb-4">Book Service</h3>
+        <p class="text-idcText mb-6">
           Are you sure you want to book
-          <span id="modalServiceName" class="text-primary"></span>?
+          <span id="modalServiceName" class="text-idcHighlight"></span>?
         </p>
         <div class="flex justify-end space-x-4">
           <button
@@ -313,7 +326,7 @@
           <a
             id="confirmBooking"
             href="javascript:void(0);"
-            class="px-4 py-2 bg-primary hover:bg-opacity-90 text-white rounded"
+            class="px-4 py-2 bg-idcHighlight hover:bg-opacity-90 text-white rounded"
             target="_blank"
             rel="noopener noreferrer"
           >
