--- a/public/index.html
+++ b/public/index.html
@@ -29,18 +29,26 @@
         >
         <nav
           id="mobile-nav"
-          class="hidden absolute md:relative md:flex md:flex-row flex-col md:space-x-8 top-full left-0 w-full md:w-auto bg-idcAccent md:bg-transparent"
+          class="hidden absolute md:relative md:flex md:flex-row flex-col md:space-x-8 top-full left-0 w-full md:w-auto bg-idcAccent md:bg-transparent transition-all duration-300 ease-in-out overflow-hidden"
         >
-          <a href="#about" class="block py-2 px-4 hover:text-idcHighlight"
+          <a
+            href="#about"
+            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
             >About</a
           >
-          <a href="#services" class="block py-2 px-4 hover:text-idcHighlight"
+          <a
+            href="#services"
+            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
             >Services</a
           >
-          <a href="#projects" class="block py-2 px-4 hover:text-idcHighlight"
+          <a
+            href="#projects"
+            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
             >Portfolio</a
           >
-          <a href="#contact" class="block py-2 px-4 hover:text-idcHighlight"
+          <a
+            href="#contact"
+            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
             >Contact</a
           >
         </nav>
@@ -122,8 +130,8 @@
         <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Our Services
         </h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Service cards will be dynamically populated -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Service cards dynamically populated -->
         </div>
       </div>
     </section>
@@ -164,8 +172,8 @@
         <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
           Our Portfolio
         </h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Portfolio cards will be dynamically populated -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Portfolio cards dynamically populated -->
         </div>
       </div>
     </section>
@@ -297,7 +305,7 @@
     <a
       id="floatingWhatsApp"
       href="#"
-      class="fixed bottom-4 right-4 bg-idcHighlight text-white py-3 px-6 rounded-lg shadow-lg flex items-center space-x-2 hover:bg-opacity-90 transition animate-shake"
+      class="fixed bottom-4 right-4 bg-[#25D366] text-white py-3 px-6 rounded-lg shadow-lg flex items-center space-x-2 hover:bg-opacity-90 transition animate-shake"
       data-service="General Inquiry"
       data-whatsapp="Hello Andrew, I would like to discuss a project with you."
     >
