--- a/public/index.html
+++ b/public/index.html
@@ -143,19 +143,25 @@
           Why Choose Us?
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <div class="text-center">
+          <div
+            class="text-center bg-idcBackground p-6 rounded-lg shadow-lg transition-transform hover:-translate-y-2 hover:shadow-2xl"
+          >
             <i class="fas fa-paint-brush text-idcHighlight text-5xl mb-4"></i>
             <h3 class="text-xl font-semibold mb-2">Creative Expertise</h3>
             <p>
               We deliver innovative designs that reflect your unique vision.
             </p>
           </div>
-          <div class="text-center">
+          <div
+            class="text-center bg-idcBackground p-6 rounded-lg shadow-lg transition-transform hover:-translate-y-2 hover:shadow-2xl"
+          >
             <i class="fas fa-handshake text-idcHighlight text-5xl mb-4"></i>
             <h3 class="text-xl font-semibold mb-2">Client Focus</h3>
             <p>Our approach is collaborative, ensuring your needs are met.</p>
           </div>
-          <div class="text-center">
+          <div
+            class="text-center bg-idcBackground p-6 rounded-lg shadow-lg transition-transform hover:-translate-y-2 hover:shadow-2xl"
+          >
             <i class="fas fa-tools text-idcHighlight text-5xl mb-4"></i>
             <h3 class="text-xl font-semibold mb-2">Quality Execution</h3>
             <p>
@@ -305,9 +311,9 @@
     <a
       id="floatingWhatsApp"
       href="#"
-      class="fixed bottom-4 right-4 bg-[#25D366] text-white py-3 px-6 rounded-lg shadow-lg flex items-center space-x-2 hover:bg-opacity-90 transition animate-shake"
+      class="fixed bottom-4 right-4 bg-[#25D366] text-white py-3 px-6 rounded-lg shadow-lg flex items-center space-x-2 transition hover:bg-opacity-90 animate-shake"
       data-service="General Inquiry"
-      data-whatsapp="Hello Andrew, I would like to discuss a project with you."
+      data-whatsapp="Hello Tiffi, I would like to discuss a project with you."
     >
       <i class="fab fa-whatsapp text-2xl"></i>
       <span>Chat on WhatsApp</span>
@@ -321,8 +327,8 @@
       <div class="bg-idcBackground rounded-lg p-6 w-full max-w-sm">
         <h3 class="text-xl font-bold text-idcPrimary mb-4">Book Service</h3>
         <p class="text-idcText mb-6">
-          Are you sure you want to book
-          <span id="modalServiceName" class="text-idcHighlight"></span>?
+          You are about to book
+          <span id="modalServiceName" class="text-idcHighlight"></span>.
         </p>
         <div class="flex justify-end space-x-4">
           <button
@@ -338,7 +344,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            Confirm
+            OK
           </a>
         </div>
       </div>
