--- a/public/index.html
+++ b/public/index.html
@@ -328,18 +328,19 @@
         <h3 class="text-xl font-bold text-idcPrimary mb-4">Book Service</h3>
         <p class="text-idcText mb-6">
           You are about to book
-          <span id="modalServiceName" class="text-idcHighlight"></span>.
+          <span id="modalServiceName" class="text-idcHighlight font-bold"></span
+          >.
         </p>
         <div class="flex justify-end space-x-4">
           <button
-            id="closeModal"
+            id="cancelModal"
             class="px-4 py-2 bg-gray-700 hover:bg-gray-600 text-white rounded"
           >
             Cancel
           </button>
           <a
             id="confirmBooking"
-            href="javascript:void(0);"
+            href="#"
             class="px-4 py-2 bg-idcHighlight hover:bg-opacity-90 text-white rounded"
             target="_blank"
             rel="noopener noreferrer"
