--- a/public/index.html
+++ b/public/index.html
@@ -412,6 +412,31 @@
       </div>
     </section>
 
+    <!-- Our Location Section -->
+    <section id="location" class="py-16 bg-idcAccent">
+      <div class="text-center px-6">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6">
+          Visit Our Office
+        </h2>
+        <p class="text-idcText mb-6">
+          Come see us in person! Our office is conveniently located in Nairobi,
+          Kenya.
+        </p>
+      </div>
+
+      <!-- Full-Width Map -->
+      <div class="w-screen">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31771.002357080337!2d36.82194627176438!3d-1.2920667588082036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10dc8465e2e1%3A0x920bfbcfa5447443!2sNairobi%2C%20Kenya!5e0!3m2!1sen!2sus!4v1699999381985!5m2!1sen!2sus"
+          width="100%"
+          height="400"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+
     <footer class="bg-idcBackground text-center py-4">
       <p class="text-idcText">
         © 2024 Interior Design Kenya. All Rights Reserved.
@@ -470,6 +495,9 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- GSAP and ScrollTrigger -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script type="module" src="/scripts/index.js"></script>
   </body>
 </html>
