updating the contact info

--- a/public/index.html
+++ b/public/index.html
@@ -383,9 +383,9 @@
               <span
                 >Email:
                 <a
-                  href="mailto:devandrew66@gmail.com"
+                  href="mailto:info@interiorsbytifi.co.ke"
                   class="hover:underline text-idcHighlight"
-                  >devandrew66@gmail.com</a
+                  >info@interiorsbytifi.co.ke</a
                 ></span
               >
             </div>
@@ -394,9 +394,31 @@
               <span
                 >Phone:
                 <a
-                  href="tel:+254725746263"
+                  href="tel:+254 725 790947"
                   class="hover:underline text-idcHighlight"
-                  >+254 725 746263</a
+                  >+254 725 790947</a
+                ></span
+              >
+            </div>
+            <div class="mb-4">
+              <i class="fab fas fa-instagram text-idcHighlight mr-3"></i>
+              <span
+                >Instagram:
+                <a
+                  href="https://www.instagram.com/interiorsbytifi"
+                  class="hover:underline text-idcHighlight"
+                  >interiorsbytifi</a
+                ></span
+              >
+            </div>
+            <div class="mb-4">
+              <i class="fab fa-facebook text-idcHighlight mr-3"></i>
+              <span
+                >Facebook:
+                <a
+                  href="tel:+254 725 790947"
+                  class="hover:underline text-idcHighlight"
+                  >+254 725 790947</a
                 ></span
               >
             </div>
