--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div>
             <img
-              src="/images/team.jpg"
+              src="/images/forest view gardens/team.jpg"
               alt="Interior Design Team"
               class="rounded-lg shadow-lg w-full"
             />
@@ -132,6 +132,18 @@
         </h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
           <!-- Service cards dynamically populated -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Featured Products Section -->
+    <section id="featured-products" class="py-16 bg-idcBackground">
+      <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-idcSerif text-idcPrimary mb-6 text-center">
+          Featured Products
+        </h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Products dynamically populated here -->
         </div>
       </div>
     </section>
@@ -240,7 +252,7 @@
         <!-- Lead Magnet Image -->
         <div>
           <img
-            src="/images/lead-magnet.jpg"
+            src="/images/forest view gardens/guide.jpg"
             alt="Interior Design Guide"
             class="rounded-lg shadow-lg"
             loading="lazy"
