--- a/public/index.html
+++ b/public/index.html
@@ -24,37 +24,32 @@
       <div
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
-        <a href="#hero" class="text-xl font-bold text-idcPrimary"
+        <a href="/" class="text-xl font-bold text-idcPrimary"
           >Interior Design</a
         >
-        <nav
-          id="mobile-nav"
-          class="hidden absolute md:relative md:flex md:flex-row flex-col md:space-x-8 top-full left-0 w-full md:w-auto bg-idcAccent md:bg-transparent transition-all duration-300 ease-in-out overflow-hidden"
-        >
-          <a
-            href="#about"
-            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
-            >About</a
-          >
-          <a
-            href="#services"
-            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
-            >Services</a
-          >
-          <a
-            href="#projects"
-            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
-            >Portfolio</a
-          >
-          <a
-            href="#contact"
-            class="block py-2 px-4 text-idcPrimary no-underline hover:text-idcHighlight hover:scale-105 transition-transform"
-            >Contact</a
-          >
+        <nav id="mobile-nav" class="hidden md:flex space-x-8">
+          <a href="#about" class="hover:text-idcHighlight">About</a>
+          <a href="#services" class="hover:text-idcHighlight">Services</a>
+          <a href="#projects" class="hover:text-idcHighlight">Portfolio</a>
+          <a href="#contact" class="hover:text-idcHighlight">Contact</a>
         </nav>
-        <button id="mobile-menu" class="md:hidden text-idcPrimary">
-          <i class="fas fa-bars text-xl"></i>
-        </button>
+        <div class="flex items-center space-x-4">
+          <a href="/cart.html" class="relative">
+            <i class="fas fa-shopping-cart text-idcPrimary text-xl"></i>
+            <span
+              id="cart-count"
+              class="absolute top-0 right-0 bg-idcHighlight text-black text-sm rounded-full px-2 py-1 hidden"
+            >
+              0
+            </span>
+          </a>
+          <button
+            class="js-auth-button px-4 py-2 rounded-lg text-white"
+          ></button>
+          <button id="mobile-menu" class="md:hidden">
+            <i class="fas fa-bars text-idcPrimary text-xl"></i>
+          </button>
+        </div>
       </div>
     </header>
 
