fixing the add to caRT

--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,16 @@
           <a href="#contact" class="hover:text-idcHighlight">Contact</a>
         </nav>
         <div class="flex items-center space-x-4">
-          <a href="/cart.html" class="relative">
+          <a href="/checkout.html" class="relative">
             <i class="fas fa-shopping-cart text-idcPrimary text-xl"></i>
             <span
               id="cart-count"
-              class="absolute top-0 right-0 bg-idcHighlight text-black text-sm rounded-full px-2 py-1 hidden"
+              class="js-cart-quantity absolute top-0 right-0 bg-idcHighlight text-black text-sm rounded-full px-2 py-1 hidden"
             >
               0
             </span>
           </a>
+
           <button
             class="js-auth-button px-4 py-2 rounded-lg text-white"
           ></button>
