--- a/public/checkout.html
+++ b/public/checkout.html
@@ -9,9 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/shared/general.css" />
+    <!--
+     <link rel="stylesheet" href="/styles/shared/general.css" />
     <link rel="stylesheet" href="/styles/pages/checkout/checkout-header.css" />
-    <link rel="stylesheet" href="/styles/pages/checkout/checkout.css" />
+    <link rel="stylesheet" href="/styles/pages/checkout/checkout.css" />  -->
+
+    <link rel="stylesheet" href="/output.css" />
   </head>
   <body>
     <div class="checkout-header">
