--- a/public/checkout.html
+++ b/public/checkout.html
@@ -1,101 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <!--
-     <link rel="stylesheet" href="/styles/shared/general.css" />
-    <link rel="stylesheet" href="/styles/pages/checkout/checkout-header.css" />
-    <link rel="stylesheet" href="/styles/pages/checkout/checkout.css" />  -->
-
     <link rel="stylesheet" href="/output.css" />
   </head>
-  <body>
-    <div class="checkout-header">
-      <div class="header-content">
-        <div class="checkout-header-left-section">
-          <a href="/">
-            <img
-              class="amazon-logo"
-              src="/images/amazon-log.png"
-              alt="Your logo"
-            />
-            <img
-              class="amazon-mobile-logo"
-              src="/images/amazon-mobile-log.png"
-              alt="Your logo"
-            />
-          </a>
-        </div>
-        <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link" href="/">3 items</a>)
-        </div>
-        <div class="checkout-header-right-section">
-          <img src="/images/icons/checkout-lock-icon.png" />
-        </div>
+  <body class="font-idcSans bg-idcBackground text-idcText">
+    <div
+      class="checkout-header bg-white shadow-md p-4 flex items-center justify-between"
+    >
+      <div class="flex items-center">
+        <a href="/">
+          <img
+            class="hidden lg:block h-8"
+            src="/images/amazon-log.png"
+            alt="Your logo"
+          />
+          <img
+            class="block lg:hidden h-8"
+            src="/images/amazon-mobile-log.png"
+            alt="Your logo"
+          />
+        </a>
+      </div>
+      <div class="text-lg font-semibold">
+        Checkout (<a href="/" class="text-idcPrimary hover:underline">3 items</a
+        >)
+      </div>
+      <div>
+        <img src="/images/icons/checkout-lock-icon.png" alt="Secure Checkout" />
       </div>
     </div>
 
-    <div class="main">
-      <div class="page-title">Review your order</div>
-      <div class="checkout-grid">
-        <div class="order-summary js-order-summary"></div>
-        <div class="payment-summary js-payment-summary"></div>
+    <main class="max-w-7xl mx-auto p-6 mt-10">
+      <h1 class="text-xl font-bold mb-6">Review your order</h1>
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+        <!-- Order Summary -->
+        <div class="col-span-2">
+          <div
+            class="js-order-summary border rounded-lg p-4 bg-white shadow"
+          ></div>
+        </div>
+        <!-- Payment Summary -->
+        <div
+          class="js-payment-summary border rounded-lg p-4 bg-white shadow"
+        ></div>
       </div>
-    </div>
+    </main>
 
-    <div id="orderDetailsModal" class="modal">
-      <div class="modal-content">
-        <span class="close-button">&times;</span>
-        <h2>Order Details</h2>
-        <form id="orderDetailsForm">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
+    <!-- Order Details Modal -->
+    <div
+      id="orderDetailsModal"
+      class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+    >
+      <div
+        class="modal-content bg-white p-6 rounded-xl shadow-lg w-full max-w-md"
+      >
+        <button
+          class="close-button text-xl font-bold text-gray-700 absolute top-4 right-6"
+        >
+          &times;
+        </button>
+        <h2 class="text-2xl font-bold mb-4">Order Details</h2>
+        <form id="orderDetailsForm" class="space-y-4">
+          <label for="name" class="block text-lg font-medium">Name</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            required
+            class="w-full border rounded-lg px-4 py-2"
+          />
 
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
+          <label for="email" class="block text-lg font-medium">Email</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            class="w-full border rounded-lg px-4 py-2"
+          />
 
-          <label for="phone">Phone Number:</label>
+          <label for="phone" class="block text-lg font-medium"
+            >Phone Number</label
+          >
           <input
             type="tel"
             id="phone"
             name="phone"
             required
             placeholder="+254 712 345678"
+            class="w-full border rounded-lg px-4 py-2"
           />
 
-          <label for="address">Address:</label>
-          <input type="text" id="address" name="address" required />
+          <label for="address" class="block text-lg font-medium">Address</label>
+          <input
+            type="text"
+            id="address"
+            name="address"
+            required
+            class="w-full border rounded-lg px-4 py-2"
+          />
 
-          <label for="payment">Payment Method:</label>
+          <label for="payment" class="block text-lg font-medium"
+            >Payment Method</label
+          >
           <input
             type="text"
             id="payment"
             name="payment"
             value="Cash on Delivery"
             readonly
+            class="w-full border rounded-lg px-4 py-2 bg-gray-100"
           />
 
-          <button type="submit" class="button-primary">Submit Order</button>
+          <button
+            type="submit"
+            class="w-full bg-idcHighlight text-idcText font-semibold py-2 px-4 rounded-lg hover:bg-yellow-500"
+          >
+            Submit Order
+          </button>
         </form>
       </div>
     </div>
 
     <!-- Order Confirmation Modal -->
-    <div id="confirmationModal" class="modal" style="display: none">
-      <div class="modal-content">
-        <h2>Order Placed Successfully!</h2>
-        <p>
+    <div
+      id="confirmationModal"
+      class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+    >
+      <div
+        class="modal-content bg-white p-6 rounded-xl shadow-lg w-full max-w-md"
+      >
+        <h2 class="text-2xl font-bold text-idcText">
+          Order Placed Successfully!
+        </h2>
+        <p class="my-4 text-idcText">
           Your order has been submitted. You will receive a confirmation email
           shortly.
         </p>
-        <button onclick="window.location.href='/orders.html'">
+        <button
+          onclick="window.location.href='/orders.html'"
+          class="w-full bg-idcHighlight text-idcText font-semibold py-2 px-4 rounded-lg hover:bg-yellow-500"
+        >
           View Orders
         </button>
       </div>
