--- a/public/checkout.html
+++ b/public/checkout.html
@@ -25,8 +25,7 @@
         </a>
       </div>
       <div class="text-lg font-semibold">
-        Checkout (<a href="/" class="text-idcPrimary hover:underline">3 items</a
-        >)
+        Checkout (<span class="js-cart-quantity">3</span> items)
       </div>
       <div>
         <img src="/images/icons/checkout-lock-icon.png" alt="Secure Checkout" />
