--- a/public/admin.html
+++ b/public/admin.html
@@ -22,7 +22,23 @@
     <!-- Main Content -->
     <main class="container mx-auto px-6 py-8">
       <!-- Page Title -->
-      <h2 class="text-xl font-bold text-idcPrimary mb-6">Admin Dashboard</h2>
+      <div class="flex justify-between items-center mb-4">
+        <h3 class="text-lg font-bold text-idcText">Orders</h3>
+        <div class="flex items-center space-x-2">
+          <input
+            type="text"
+            id="searchOrders"
+            placeholder="Search by Order ID, Name, or Email"
+            class="w-64 px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:ring-idcPrimary"
+          />
+          <button
+            id="clearSearch"
+            class="bg-idcHighlight text-black rounded px-4 py-2 hover:bg-yellow-600"
+          >
+            Clear
+          </button>
+        </div>
+      </div>
 
       <!-- Stats Section -->
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-8">
