implementing the search bar on the products page

--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,23 @@
           >Interior Design</a
         >
 
-        <!-- Navigation Links -->
+        <!-- Navigation Links with Font Awesome icons -->
         <nav id="mobile-nav" class="hidden md:flex space-x-8">
-          <a href="#about" class="hover:text-idcHighlight">About</a>
-          <a href="#services" class="hover:text-idcHighlight">Services</a>
-          <a href="/products.html" class="hover:text-idcHighlight">Products</a>
-          <a href="#projects" class="hover:text-idcHighlight">Portfolio</a>
-          <a href="#contact" class="hover:text-idcHighlight">Contact</a>
+          <a href="#about" class="hover:text-idcHighlight">
+            <i class="fas fa-info-circle mr-2"></i>About
+          </a>
+          <a href="#services" class="hover:text-idcHighlight">
+            <i class="fas fa-concierge-bell mr-2"></i>Services
+          </a>
+          <a href="/products.html" class="hover:text-idcHighlight">
+            <i class="fas fa-box-open mr-2"></i>Products
+          </a>
+          <a href="#projects" class="hover:text-idcHighlight">
+            <i class="fas fa-briefcase mr-2"></i>Portfolio
+          </a>
+          <a href="#contact" class="hover:text-idcHighlight">
+            <i class="fas fa-envelope mr-2"></i>Contact
+          </a>
         </nav>
 
         <!-- Cart and Auth Buttons -->
