--- a/public/products.html
+++ b/public/products.html
@@ -11,33 +11,46 @@
     <!-- Navbar -->
     <header class="bg-idcAccent sticky top-0 z-50">
       <div
-        class="container mx-auto flex items-center justify-between py-4 px-6"
+        class="container mx-auto flex flex-wrap items-center justify-between gap-y-4 py-4 px-6"
       >
-        <a href="/" class="text-xl font-bold text-idcPrimary"
+        <a href="/" class="text-2xl font-bold text-idcPrimary flex-grow-0"
           >Interior Design</a
         >
-        <nav id="mobile-nav" class="hidden md:flex space-x-8">
-          <a href="#about" class="hover:text-idcHighlight">About</a>
-          <a href="#services" class="hover:text-idcHighlight">Services</a>
-          <a href="/products.html" class="hover:text-idcHighlight">Products</a>
-          <a href="#projects" class="hover:text-idcHighlight">Portfolio</a>
-          <a href="#contact" class="hover:text-idcHighlight">Contact</a>
-        </nav>
+
+        <div class="flex items-center w-full lg:w-auto flex-grow max-w-2xl">
+          <input
+            type="text"
+            id="search-input"
+            placeholder="Search products..."
+            class="w-full h-12 py-2 px-4 rounded-l-md text-idcText bg-idcBackground border border-idcHighlight focus:outline-none focus:ring-2 focus:ring-idcHighlight"
+          />
+          <button
+            id="search-button"
+            class="h-12 px-5 bg-idcHighlight text-black font-semibold rounded-r-md hover:bg-opacity-90"
+          >
+            Search
+          </button>
+        </div>
+
+        <div class="relative w-full lg:w-auto mt-2 lg:mt-0">
+          <ul
+            id="suggestion-list"
+            class="absolute top-full mt-1 w-full bg-white shadow-lg rounded-lg hidden z-10 max-h-48 overflow-y-auto"
+          ></ul>
+        </div>
+
         <div class="flex items-center space-x-4">
           <a href="/checkout.html" class="relative">
-            <i class="fas fa-shopping-cart text-idcPrimary text-xl"></i>
+            <i class="fas fa-shopping-cart text-idcPrimary text-2xl"></i>
             <span
               id="cart-count"
-              class="js-cart-quantity absolute top-0 right-0 bg-idcHighlight text-black text-sm rounded-full px-2 py-1 hidden"
+              class="js-cart-quantity absolute top-0 right-0 bg-idcHighlight text-black text-xs rounded-full px-2 py-1 hidden"
             >
               0
             </span>
           </a>
-          <button
-            class="js-auth-button px-4 py-2 rounded-lg text-white"
-          ></button>
-          <button id="mobile-menu" class="md:hidden">
-            <i class="fas fa-bars text-idcPrimary text-xl"></i>
+          <button class="js-auth-button px-4 py-2 rounded-md text-white">
+            Login
           </button>
         </div>
       </div>
